[tool.poetry]
name = "droit-tools"
version = "0.1.0"
description = ""
authors = ["imry <imry.rosnebaum@droitfintech.com>"]

[tool.poetry.dependencies]
python = "^3.8"
xlrd = "^1.2.0"
numpy = "^1.20.3"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
